unpackaged/main/default/objects/nbavs__Insights_Failure__c/nbavs__Insights_Failure__c.object-meta.xml
<CustomObject>
    <label>Insight Failure</label>
    <nameField>
        <displayFormat>Err-{00000}</displayFormat>
        <label>Insights Failure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insights Failures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>