unpackaged/main/default/objects/nbavs__Insights_Failure__c/fields/nbavs__Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Error_Msg__c</fullName>
    <label>Error Msg</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>