unpackaged/main/default/objects/nbavs__Insights_Failure__c/fields/nbavs__Failed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Failed_DateTime__c</fullName>
    <label>Failed DateTime</label>
    <type>DateTime</type>
</CustomField>