unpackaged/main/default/objects/nbavs__Insights_Failure__c/fields/nbavs__InsightId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__InsightId__c</fullName>
    <formula>nbavs__Insights__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InsightId</label>
    <type>Text</type>
</CustomField>