unpackaged/main/default/objects/nbavs__Insights_Failure__c/fields/nbavs__Insights__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insights__c</fullName>
    <label>Insights</label>
    <referenceTo>nbavs__Insights__c</referenceTo>
    <relationshipName>Insights_Failures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>