unpackaged/main/default/objects/nbavs__Insights_Failure__c/fields/nbavs__QueryType__c.field-meta.xml
<CustomField>
    <fullName>nbavs__QueryType__c</fullName>
    <label>QueryType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transcription</fullName>
            </value>
            <value>
                <fullName>CallFlow</fullName>
            </value>
            <value>
                <fullName>TalkTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>