unpackaged/main/default/objects/nbavs__Insights_Failure__c/fields/nbavs__Retries__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Retries__c</fullName>
    <label>Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>