unpackaged/main/default/objects/nbavs__Insights_Failure__c/fields/nbavs__Retry_When__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Retry_When__c</fullName>
    <description>value specified is in minutes</description>
    <formula>IF(nbavs__Retries__c == 0,2,
  IF(nbavs__Retries__c == 1,5, 
    IF(nbavs__Retries__c == 2, 10,
      IF(nbavs__Retries__c == 3, 30,
        IF(nbavs__Retries__c == 4,60,180)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retry When</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>